former-apps/wallabag/wallabag-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: wallabag
spec:
  type: ClusterIP
  selector:
    app: wallabag
  ports:
    - port: 3000
      targetPort: 80
