former-apps/wallabag/wallabag-ext-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wallabag-ext

  labels:
    type: external
spec:
  tls:
    - hosts:
        - wallabag.former-hostname.com
      secretName: wallabag.former-hostname.com
  rules:
    - host: wallabag.former-hostname.com
      http:
        paths:
          - backend:
              service:
                name: wallabag
                port:
                  number: 3000
            path: /
            pathType: Prefix
